--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@pinkairship/use-messenger",
   "version": "1.0.0",
   "description": "A react library that provides a context and hook to add and remove messages from your application.",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
     "start": "webpack serve --config webpack.config.js --progress --profile --watch --content-base src/",
@@ -33,9 +33,7 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "nanoid": "^3.1.20",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "nanoid": "^3.1.20"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -44,9 +42,13 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@testing-library/react": "^11.2.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
