--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "jest",
     "start": "webpack serve --config webpack.config.js --progress --profile --watch --content-base src/",
+    "preversion": "npm test && npm run build",
+    "postversion": "git push && git push --tags && npm publish --access public",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
     "prepublishOnly": "npm run build",
     "build": "rm -rf dist && webpack && cp LICENSE dist/LICENSE",
     "lint": "eslint .",
