Add preconstruct for builds
webpack was just not cutting it (too confusing,
packages weren't always working as expected in
some projects)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,8 +19,10 @@
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
-    }
+    },
+    "requireConfigFile" : "false"
   },
+  "babelOptions": { "configFile": "./babel.config.js" },
   "settings": {
     "react": {
       "version": "detect"
