--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "version:minor": "npm version minor",
     "version:major": "npm version major",
     "prepublishOnly": "npm run build",
-    "build": "rm -rf dist && webpack && cp LICENSE dist/LICENSE",
+    "build": "NODE_ENV=production preconstruct build && cp LICENSE dist/LICENSE",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -50,6 +50,7 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@preconstruct/cli": "^2.0.6",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "babel-loader": "^8.2.2",
