--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@pinkairship/use-messenger",
   "version": "1.1.2",
   "description": "A react library that provides a context and hook to add and remove messages from your application.",
-  "main": "dist/index.js",
+  "main": "dist/pinkairship-use-messenger.cjs.js",
+  "module": "dist/pinkairship-use-messenger.esm.js",
   "scripts": {
     "test": "jest",
     "start": "webpack serve --config webpack.config.js --progress --profile --watch --content-base src/",
